<resources>
  <string name="app_name">Cloud Sync</string>
  <string name="sign_in">Sign in with Google</string>
  <string name="upload">Upload</string>
  <string name="first_name">First name</string>
  <string name="last_name">Last name</string>
  <string name="phone">Phone</string>
  <string name="add">Add</string>
  <string name="backup">Backup</string>
  <string name="restore">Restore</string>
  <string name="field_required_error">This field is required</string>
</resources>